--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="start">
       <h1><a href="https://www.google.com/search?q=%E3%83%91%E3%83%AD%E3%83%B3%E3%83%89%E3%81%AE%E3%83%91%E3%83%A9%E3%83%89%E3%83%83%E3%82%AF%E3%82%B9" target="_blank">パロンドのパラドックス</a>　シミュレータ</h1>
       <p>期待値マイナスのゲームを組み合わせて、期待値プラスのゲームを作れるのか</p>
-      <button id="start" class="btn btn-primary btn-lg">スタート</button>
+      <p><button id="start" class="btn btn-primary btn-lg">スタート</button></p>
+      <p><input type="number" id="draw_count" value="1" min="1" />回ごとに描画</p>
     </div>
     <div id="games">
       <div id="game_main" class="game">
